--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to RouteBite</h1>
-        <p>Savor the Journey: Explore, Eat, Relax.</p>
+    <img src="logo.png" alt="Roadbite Logo" style="max-width: 200px;"> <!-- Adjust max-width as necessary -->
+    <h1>Welcome to RouteBiite</h1>
+    <p>Your personal guide to restaurants and bars along your route.</p>
     </header>
     <nav>
         <a href="#home">Home</a>
