--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Roadbite Logo" style="max-width: 200px;">
+        <img src="logo.png" alt="logo" style="max-width: 200px;">
         <h1>Welcome to RouteBite</h1>
         <p>Your personal guide to restaurants and bars along your route.</p>
     </header>
