--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="logo" style="max-width: 200px;">
+        <img src="logo.png" alt="RouteBite Logo" style="max-width: 200px;"> <!-- Ensure the src path is correct -->
         <h1>Welcome to RouteBite</h1>
         <p>Your personal guide to restaurants and bars along your route.</p>
     </header>
@@ -31,7 +31,7 @@
         </section>
         <section id="about">
             <h2>About Us</h2>
-            <p>RouteBite was founded by a passionate team who was trying to find food that fits .</p>
+            <p>RouteBite was founded by a passionate team who was trying to find food that fits.</p>
         </section>
         <section id="features">
             <h2>Features</h2>
