--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RouteBite - Find Food That Fits</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet"> <!-- Archivo Black Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> <!-- Roboto Font -->
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="RouteBite Logo" style="max-width: 200px;"> <!-- Ensure the src path is correct -->
+        <img src="logo.png" alt="RouteBite Logo" style="max-width: 200px;">
         <h1>Welcome to RouteBite</h1>
         <p>Your personal guide to restaurants and bars along your route.</p>
     </header>
@@ -27,7 +28,7 @@
                 <p>Welcome to RouteBite, your personal guide to discovering local eateries and bars on your journey. Click below to learn more about how we can enhance your travel experience.</p>
                 <button onclick="location.href='#about'">Learn More</button>
             </div>
-            <div style="clear: both;"></div> <!-- Clear float -->
+            <div style="clear: both;"></div>
         </section>
         <section id="about">
             <h2>About Us</h2>
@@ -44,7 +45,7 @@
         </section>
         <section id="reviews">
             <h2>Reviews</h2>
-            <p>"RouteBiite has really enhanced my travel! The recommendations were perfect." - Geoff A.</p>
+            <p>"RouteBite has really enhanced my travel! The recommendations were perfect." - Geoff A.</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
@@ -57,7 +58,3 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 RouteBite. All rights reserved. We love Canada.</p>
-    </footer>
-</body>
-</html>
