--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@ Hier ist der HTML-Code mit den Bewertungen in Englisch und jeweils fünf Sternen
                 <h2>The Leading Guide to Allergy-Friendly Restaurants Nationwide</h2>
                 <form action="/search" method="GET">
                     <div class="route-options">
-                        <button type="button"><img src="route-icon.png" alt="Route"></button>
-                        <button type="button"><img src="car-icon.png" alt="Car"></button>
+                        <button type="button"><img src="route-icon.jpeg" alt="Route"></button>
+                        <button type="button"><img src="car-icon.jpeg" alt="Car"></button>
                         <button type="button"><img src="walk-icon.png" alt="Walk"></button>
-                        <button type="button"><img src="bus-icon.png" alt="Bus"></button>
-                        <button type="button"><img src="bike-icon.png" alt="Bike"></button>
+                        <button type="button"><img src="bus-icon.jpeg" alt="Bus"></button>
+                        <button type="button"><img src="bike-icon.jpeg" alt="Bike"></button>
                     </div>
-                    <input type="text" name="start" placeholder="starting point">
-                    <input type="text" name="destination" placeholder="destination">
+                    <input type="text" name="Startpoint" placeholder="starting point">
+                    <input type="text" name="Destination" placeholder="destination">
                     <input type="text" name="zipcode" placeholder="Search by Zip Code or City & State">
                     <input type="text" name="restaurant" placeholder="Restaurant Name">
                     <select name="distance">
