--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-Hier ist der HTML-Code mit den Bewertungen in Englisch und jeweils fünf Sternen für Justin Trudeau, Connor McDavid und Seth Rogen:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,14 +24,14 @@ Hier ist der HTML-Code mit den Bewertungen in Englisch und jeweils fünf Sternen
                 <h2>The Leading Guide to Allergy-Friendly Restaurants Nationwide</h2>
                 <form action="/search" method="GET">
                     <div class="route-options">
-                        <button type="button"><img src="route-icon.jpeg" alt="Route"></button>
-                        <button type="button"><img src="car-icon.jpeg" alt="Car"></button>
+                        <button type="button"><img src="route-icon.png" alt="Route"></button>
+                        <button type="button"><img src="car-icon.png" alt="Car"></button>
                         <button type="button"><img src="walk-icon.png" alt="Walk"></button>
-                        <button type="button"><img src="bus-icon.jpeg" alt="Bus"></button>
-                        <button type="button"><img src="bike-icon.jpeg" alt="Bike"></button>
+                        <button type="button"><img src="bus-icon.png" alt="Bus"></button>
+                        <button type="button"><img src="bike-icon.png" alt="Bike"></button>
                     </div>
-                    <input type="text" name="Startpoint" placeholder="starting point">
-                    <input type="text" name="Destination" placeholder="destination">
+                    <input type="text" name="start" placeholder="starting point">
+                    <input type="text" name="destination" placeholder="destination">
                     <input type="text" name="zipcode" placeholder="Search by Zip Code or City & State">
                     <input type="text" name="restaurant" placeholder="Restaurant Name">
                     <select name="distance">
@@ -57,6 +54,7 @@ Hier ist der HTML-Code mit den Bewertungen in Englisch und jeweils fünf Sternen
                         <button type="button">Eggs</button>
                     </div>
                     <p><a href="#">Create Profile to Save Allergen Settings</a></p>
+                    <p><a href="#">Create a Family Profile</a></p>
                 </form>
             </div>
             <div class="map-image-container" style="width: 25%;">
@@ -71,25 +69,17 @@ Hier ist der HTML-Code mit den Bewertungen in Englisch und jeweils fünf Sternen
         </p>
         <p class="review">
             <span class="stars">★★★★★</span>
-            "I love how the app lets me filter restaurants by diplomatic ambiance. Finally a place where every salad gets a fair chance to end up on my plate!" - Justin Trudeau
+            "Love the diplomatic ambiance filter. Every salad gets a chance!" - Justin Trudeau
         </p>
         <p class="review">
             <span class="stars">★★★★★</span>
-            "The speed of this app is impressive, almost as fast as me on the ice. If only finding a good steak in the off-season was this quick!" - Connor McDavid
+            "Impressive speed, almost as fast as me on ice!" - Connor McDavid
         </p>
         <p class="review">
             <span class="stars">★★★★★</span>
-            "This app is great, especially the late-night snacks filter. It has found more good munchies spots than my buddy after a movie night - and that's saying something!" - Seth Rogen
+            "Great for late-night snacks, finds more spots than my buddy!" - Seth Rogen
         </p>
+        <p>© 2024 RouteBite. Founded in 2024. All rights reserved. We love Canada.</p>
     </footer>
 </body>
 </html>
-<!-- Existing form content -->
-<div class="allergen-buttons">
-    <button type="button">Peanuts</button>
-    <button type="button">Vegan</button>
-    <button type="button">Dairy</button>
-    <!-- More buttons -->
-</div>
-<p><a href="#">Create Profile to Save Allergen Settings</a></p>
-<p><a href="#">Create a Family Profile</a></p> <!-- Neuer Link -->
