--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <span class="stars">★★★★★</span>
             "Great for late-night snacks, finds more spots than my buddy!" - Seth Rogen
         </p>
-        <p>© 2024 RouteBite. Founded in 2024. All rights reserved. We love Canada.</p>
+        <p>© 2024 RouteBite. Founded in 2024. All rights reserved. We love Canada.And America.</p>
     </footer>
 </body>
 </html>
