--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <button type="button"><img src="bus-icon.jpeg" alt="Bus"></button>
                         <button type="button"><img src="bike-icon.jpeg" alt="Bike"></button>
                     </div>
-                    <input type="text" name="start" placeholder="starting point">
-                    <input type="text" name="destination" placeholder="destination">
+                    <input type="text" name="start" placeholder="Starting point">
+                    <input type="text" name="destination" placeholder="Destination">
                     <input type="text" name="zipcode" placeholder="Search by Zip Code or City & State">
                     <input type="text" name="restaurant" placeholder="Restaurant Name">
                     <select name="distance">
