--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                 <h2>The Leading Guide to Allergy-Friendly Restaurants Nationwide</h2>
                 <form action="/search" method="GET">
                     <div class="route-options">
-                        <button type="button"><img src="route-icon.jpeg" alt="Route"></button>
-                        <button type="button"><img src="car-icon.jpeg" alt="Car"></button>
-                        <button type="button"><img src="walk-icon.jpeg" alt="Walk"></button>
-                        <button type="button"><img src="bus-icon.jpeg" alt="Bus"></button>
-                        <button type="button"><img src="bike-icon.jpeg" alt="Bike"></button>
+                        <button type="button"><img src="route-icon.jpg" alt="Route"></button>
+                        <button type="button"><img src="car-icon.jpg" alt="Car"></button>
+                        <button type="button"><img src="walk-icon.jpg" alt="Walk"></button>
+                        <button type="button"><img src="bus-icon.jpg" alt="Bus"></button>
+                        <button type="button"><img src="bike-icon.jpg" alt="Bike"></button>
                     </div>
-                    <input type="text" name="start" placeholder="Starting point">
+                    <input type="text" name="start" placeholder="Starting Point">
                     <input type="text" name="destination" placeholder="Destination">
-                    <input type="text" name="zipcode" placeholder="Search by Zip Code or City & State">
+                    <input type="text" name="zipcode" placeholder="Search by Zip Code or City">
                     <input type="text" name="restaurant" placeholder="Restaurant Name">
                     <select name="distance">
                         <option value="5">5 km</option>
@@ -63,23 +63,25 @@
         </div>
     </main>
     <footer>
-        <p class="review">
-            <span class="stars">★★★★★</span>
-            "RouteBite has really enhanced my travel! The recommendations were perfect." - Geoff A.
-        </p>
-        <p class="review">
-            <span class="stars">★★★★★</span>
-            "Love the diplomatic ambiance filter. Every salad gets a chance!" - Justin Trudeau
-        </p>
-        <p class="review">
-            <span class="stars">★★★★★</span>
-            "Impressive speed, almost as fast as me on ice!" - Connor McDavid
-        </p>
-        <p class="review">
-            <span class="stars">★★★★★</span>
-            "Great for late-night snacks, finds more spots than my buddy!" - Seth Rogen
-        </p>
-        <p>© 2024 RouteBite. Founded in 2024. All rights reserved. We love Canada. And America.</p>
+        <div class="reviews">
+            <div class="review">
+                <span class="stars">★★★★★</span>
+                "RouteBite has really enhanced my travel! The recommendations were perfect." - Geoff A.
+            </div>
+            <div class="review">
+                <span class="stars">★★★★★</span>
+                "Love the diplomatic ambiance filter. Every salad gets a chance!" - Justin Trudeau
+            </div>
+            <div class="review">
+                <span class="stars">★★★★★</span>
+                "Impressive speed, almost as fast as me on ice!" - Connor McDavid
+            </div>
+            <div class="review">
+                <span class="stars">★★★★★</span>
+                "Great for late-night snacks, finds more spots than my buddy!" - Seth Rogen
+            </div>
+        </div>
+        <p>© 2024 RouteBite. Founded in 2024. All rights reserved. We love Canada. And America. Of course.</p>
     </footer>
 </body>
 </html>
